--- a/src/index.html
+++ b/src/index.html
@@ -14,142 +14,187 @@
       <fieldset>
         <legend>Personal information</legend>
         <div class="block">
-          <label for="Surname">Surname:</label>
-          <input
-          type="text"
-          name="surname"
-          id="Surname"
-          required
-          autocomplete="off">
+          <label for="Surname">
+            Surname:
+            <input
+              type="text"
+              name="surname"
+              id="Surname"
+              required
+              autocomplete="off"
+            >
+          </label>
         </div>
         <div class="block">
-          <label for="Name">Name:</label>
-          <input
-          type="text"
-          name="name"
-          id="Name"
-          required
-          autocomplete="off">
+          <label for="Name">
+            Name:
+            <input
+              type="text"
+              name="name"
+              id="Name"
+              required
+              autocomplete="off"
+            >
+          </label>
         </div>
         <div class="block">
-          <label for="Age">How old are you?</label>
-          <input
-          type="number"
-          name="age"
-          id="Age"
-          min="12"
-          max="100"
-          value="12">
+          <label for="Age">
+            How old are you?
+            <input
+              type="number"
+              name="age"
+              id="Age"
+              min="12"
+              max="100"
+              value="12"
+            >
+          </label>
         </div>
         <div class="block">
-          <label for="Date">Full date of birth:</label>
-          <input
-          type="date"
-          name="date"
-          id="Date"
-          required>
+          <label for="Date">
+            Full date of birth:
+            <input
+              type="date"
+              name="date"
+              id="Date"
+              required
+            >
+          </label>
         </div>
         <div class="block">
-          <label for="Acception">I accept the term of the agreement:</label>
-          <input
-          type="checkbox"
-          name="acception"
-          id="Acception"
-          required>
+          <label for="Acception">
+            I accept the term of the agreement:
+            <input
+              type="checkbox"
+              name="acception"
+              id="Acception"
+              required
+            >
+          </label>
         </div>
       </fieldset>
       <fieldset>
         <legend>Registration</legend>
         <div class="block">
-          <label for="Email">E-mail:</label>
-          <input
-          type="email"
-          name="email"
-          id="Email"
-          placeholder="email@example.com"
-          required>
+          <label for="Email">
+            E-mail:
+            <input
+              type="email"
+              name="email"
+              id="Email"
+              placeholder="email@example.com"
+              required
+            >
+          </label>
         </div>
         <div class="block">
-          <label for="Password">Password:</label>
-          <input
-          type="password"
-          name="password"
-          id="Password"
-          minlength="5"
-          maxlength="16"
-          required>
+          <label for="Password">
+            Password:
+            <input
+              type="password"
+              name="password"
+              id="Password"
+              minlength="5"
+              maxlength="16"
+              required
+            >
+          </label>
         </div>
       </fieldset>
       <fieldset>
         <legend>An interesting fact about you!</legend>
         <div class="block">
           Do you love cats?
-          <input
-          type="radio"
-          name="cats"
-          id="Yes">
-          <label for="Yes">Yes</label>
-          <input
-          type="radio"
-          name="cats"
-          id="No">
-          <label for="No">No</label>
+            <input
+              type="radio"
+              name="cats"
+              id="Yes">
+          <label for="Yes">
+            Yes
+          </label>
+            <input
+              type="radio"
+              name="cats"
+              id="No">
+          <label for="No">
+            No
+          </label>
         </div>
         <div class="block">
-          <label for="Color">What is your favorite color?</label>
-          <input
-          type="color"
-          name="color"
-          id="Color">
+          <label for="Color">
+            What is your favorite color?
+            <input
+              type="color"
+              name="color"
+              id="Color"
+            >
+          </label>
         </div>
         <div class="block">
-          <label for="Bedtime">What time do you go to bed?</label>
-          <input
-          type="time"
-          name="bedtime"
-          id="Bedtime">
+          <label for="Bedtime">
+            What time do you go to bed?
+            <input
+              type="time"
+              name="bedtime"
+              id="Bedtime"
+            >
+          </label>
         </div>
         <div class="block">
-          <label for="Cars">What are your favorite brand of cars?</label>
-          <select
-          name="cars"
-          id="Cars"
-          multiple>
-            <option value="TOYOTA">TOYOTA</option>
-            <option value="AUDI">AUDI</option>
-            <option value="TESLA">TESLA</option>
-          </select>
+          <label for="Cars">
+            What are your favorite brand of cars?
+            <select
+              name="cars"
+              id="Cars"
+              multiple>
+                <option value="TOYOTA">TOYOTA</option>
+                <option value="AUDI">AUDI</option>
+                <option value="TESLA">TESLA</option>
+            </select>
+          </label>
         </div>
         <div class="block">
-          <label for="Rate">How do you rate our work?</label>
-          <input
-          type="range"
-          name="rate"
-          id="Rate"
-          min="1"
-          max="10"
-          step="1"
-          value="1">
+          <label for="Rate">
+            How do you rate our work?
+            <input
+              type="range"
+              name="rate"
+              id="Rate"
+              min="1"
+              max="10"
+              step="1"
+              value="1"
+            >
+          </label>
         </div>
       </fieldset>
       <fieldset>
         <legend>Additional info:</legend>
         <div class="block">
-          <label for="Comments">Comments: </label>
-          <textarea name="comments" id="Comments">
-          </textarea>
+          <label for="Comments">
+            Comments:
+            <textarea
+            name="comments"
+            id="Comments"
+            >
+            </textarea>
+          </label>
         </div>
         <div class="block">
-          <label for="Recommendation">Would you recommend us?</label>
-          <select
-          name="recommendation"
-          id="Recommendation">
-            <option value="yes">yes</option>
-            <option value="no">no</option>
-          </select>
+          <label for="Recommendation">
+            Would you recommend us?
+            <select
+              name="recommendation"
+              id="Recommendation">
+                <option value="yes">yes</option>
+                <option value="no">no</option>
+            </select>
+          </label>
         </div>
       </fieldset>
-      <button type="submit" onsubmit="onSubmit()">Submit</button>
+      <button type="submit" onsubmit="onSubmit()">
+        Submit
+      </button>
     </form>
   </body>
 </html>
